# BSYS2020

./: CMakeLists.txt
Chapter13/: Aufgabe6+7  Aufgaben  makefile  memory-user  memory-user.c
Chapter14/: Aufgaben  integerArray  integerArray.c  integerArrayFree  integerArrayFree.c  makefile  mallocFree  mallocFree.c  null  null.c
Chapter19/: Aufgaben  tlb  tlb.c  tlb.sh
Chapter19/Chapter19_TLB_Gruppe18/: makefile
Chapter21/: HW-Paging-BeyondPhys-Real.tar
Chapter21/HW-Paging-BeyondPhys-Real/: Makefile  README  mem
Chapter27/: HW-Threads-RealAPI.tar
Chapter27/HW-Threads-RealAPI/: README  main-deadlock  main-deadlock-global  main-race  main-race.c  main-signal  main-signal-cv
Chapter29/: Aufgaben  bTree  bTree.c  concurrentCounter  concurrentCounter.c  hashList  hashList.c  linkedList  linkedList.c  makefile  sloppyCounter  sloppyCounter.c
Chapter30/HW-Threads-RealCV/: README  main-one-cv-while  main-two-cvs-if  main-two-cvs-while  main-two-cvs-while-extra-unlock
Chapter31/threads-sema/: Makefile  README.md  barrier.c  fork-join.c  mutex-nostarve.c  reader-writer-nostarve.c  reader-writer.c  rendezvous.c
Chapter32/threads-bugs/: README.md  vector-avoid-hold-and-wait  vector-deadlock  vector-global-order  vector-nolock  vector-try-wait
Chapter37/: HW-Disk.tar
Chapter37/HW-Disk/: README-disk
Chapter38/: HW-Raid.tar
Chapter5/Question1/: ForkVariable.c  fork1  forkVariable
Chapter5/Question2/: ForkOutput.c  fork2  fork2.output
Chapter6/: .contextSwitch.c.swp  contextSwitch  contextSwitch.c  makefile  systemCall  systemCall.c
(+24 files in other folders)
